# lab3b

./: CMakeLists.txt  README.md  T5  T5.cpp  main  main.cpp  out.ppm  output.ppm
classes/: Camera.h  Color.h  Light.h  Material.h  Matrix4.h  Model.h  RayTrace.h  Scene.h  Sphere.h  Spotlight.h  Texture.h  Transform.h  Triangle.h  Vector3.h  Vector4.h  render.h
scenes/: example1.xml  example5.xml
